# banshee

./: .env_example  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  help.md  makefile.toml
Docker/: docker-compose.yml
Docker/config/redis/: Dockerfile  redis.conf
migrations/: 20240602180300_create_event_table.up.sql
proto/: song.proto
src/: api.rs  connection.rs  controller.rs  main.rs  model.rs  schema.rs  server.rs
src/connection/: mysql_connection.rs  redis_connection.rs
src/controller/: event_controller.rs  redis.rs
src/grpc/: api.rs
src/migrations/: V1__create_event.sql
src/model/: event.rs
