[package]
name = "banshee"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"]}
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
prost = "0.12.4"
prost-types = "0.12.4"
tokio = { version = "1", features = ["macros","rt-multi-thread","rt"] }
tonic = "0.11.0"
log = "0.4.21"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono"] }


[dependencies.redis]
version = "*"
features = ["tokio-comp","keep-alive"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "event-server"
path = "src/server.rs"


[env]
REDIS_HOST="127.0.0.1"
REDIS_PORT=6379
REDIS_USER="admin"
REDIS_PASSWORD="none"
REDIS_DB=0
PROTOBUF="/usr/local/proto"
OUT_DIR="extern/"
MYSQL_HOST="banshee_mysql"
MYSQL_PORT=3306
MYSQL_DB="banshee"
MYSQL_USER=""
MYSQL_PASSWORD=""
